# MetaWards

./: .buildinfo  .ciignore  .coveragerc  .env  .gitignore  CNAME  INSTALL.md  MANIFEST.in  Makefile  PACKAGING.md  README.md  SECURITY.md  acknowledgements.html  changelog.html  cluster_usage.html  contributing.html  development.html  devsupport.html  features.html  genindex.html  index.html  install.html  main_RepeatsNcov.c  metawards_help.html  metawards_plot_help.html  model_data.html  objects.inv  packaging.html  py-modindex.html  requirements-dev.txt  requirements-optional.txt  requirements.txt  roadmap.html  search.html  searchindex.js  setup.cfg  setup.py  snaglist.html  support.html  usage.html  (+3 more)
.github/: dependabot.yml
R/: DESCRIPTION
_modules/: index.html  metawards.html
_sources/: changelog.rst.txt  development.rst.txt  index.rst.txt  metawards_help.rst.txt  metawards_plot_help.rst.txt  model_data.rst.txt  roadmap.rst.txt  usage.rst.txt
_static/: documentation_options.js
actions/: assemble_website.py  build_docs.py  build_manylinux.py  deduplicate_website.py  gitupdate_website.py
api/: index.html  index_MetaWards.html  index_MetaWards_analysis.html  index_MetaWards_app.html  index_MetaWards_extractors.html  index_MetaWards_iterators.html  index_MetaWards_mixers.html  index_MetaWards_movers.html  index_MetaWards_themes.html  index_MetaWards_utils.html  index_api_MetaWards.html  index_api_MetaWards_analysis.html  index_api_MetaWards_app.html  index_api_MetaWards_extractors.html  index_api_MetaWards_iterators.html  index_api_MetaWards_mixers.html  index_api_MetaWards_movers.html  index_api_MetaWards_themes.html  index_api_MetaWards_utils.html
cov_html/: _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards___init___py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__disease_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__infections_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__inputfiles_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__link_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__network_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__node_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__outputfiles_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__parameters_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__population_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__variableset_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__version_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__wardinfo_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards__workspace_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_analysis___init___py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_analysis__animate_plots_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_analysis__summary_plot_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_app___init___py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_app_plot_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_app_run_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors___init___py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__extract_core_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__extract_custom_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__extract_default_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__extract_none_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__extract_small_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__output_basic_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__output_incidence_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_extractors__output_prevalence_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_iterators___init___py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_iterators__advance_additional_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_iterators__iterate_core_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_iterators__iterate_custom_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_iterators__iterate_default_py.html  _opt_hostedtoolcache_Python_3_8_2_x64_lib_python3_8_site-packages_metawards_iterators__iterate_weekday_py.html  (+117 more)
docs/: CNAME  (+4 more)
(+3655 files in other folders)
