[metadata]
name = metawards
version = 0.2.0
description = MetaWards disease metapopulation modelling
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
author = Leon Danon (original C code), Christopher Woods (Python port)
author_email = l.danon@bristol.ac.uk, Christopher.Woods@bristol.ac.uk
url = https://github.com/chryswoods/metawards
download_urls = https://pypi.org/project/metawards
project_urls =
	Documentation = https://github.com/chryswoods/metawards
	Code = https://github.com/chryswoods/metawards
	Issue tracker = https://github.com/chryswoods/metawards/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[entry_points]
console_scripts =
  metawards = metawards.scripts.run:cli

[options]
zip_safe = False
python_requires = >=3.7
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
metawards = data/*
